<resources>
    <string name="app_name">Nox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    // Strings for menu
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_log">Log</string>

    // Strings for home fragment
    <string name="home_nox_status_off">Nox is currently disabled</string>
    <string name="home_nox_status_on">Nox is enabled and running</string>

    // Strings for settings fragment
    <string name="settings_alarm_text">Allow Nox to start alarms</string>
    <string name="settings_offset_text">Use offset</string>
    <string name="settings_wake_time_text">Use wake time</string>

    <string name="settings_bedtime_text">Your bedtime</string>
    <string name="settings_bedtime_offset_text">Bedtime offset</string>
    <string name="settings_hours_of_sleep_text">Length of sleep</string>
    <string name="settings_maximum_waking_time_text">Wake time</string>

    <string name="settings_info_changes_text">Changes that you make here save automatically</string>
    <string name="settings_info_offset">Bedtime offset is used if you have bigger time window in which you go to sleep. The offset is applied before the bedtime. Example: If you set your bedtime at 22:00 and offset of 30 minutes, Nox will start monitoring at 21:30.</string>
    <string name="settings_info_wake_time">Wake time is used if you want Nox to always wake you up at certain time or before. Example: If you set wake time to 6:00 Nox will start the alarm even if your current sleep time is not yet at the set time</string>

</resources>